# templates

fast-api/: .env  pyproject.toml
fast-api/alembic/: env.py
fast-api/app/controllers/: controllers.py
fast-api/app/controllers/responses/: __init__.py
fast-api/app/model/: connection.py  repository.py
fast-api/config/: database_config.py
fast-api/tests/: hello_world_test.py  helper.py
fast-api/tests/fixtures/: hello_world.json
helpers/mapper/: __init__.py  exceptions.py  facade.py  mapper_contract.py  registry.py
helpers/mapper/contracts/: example_contract.py
helpers/time_it/: __init__.py  time_it.py
helpers/try_except/: __init__.py  try_exept.py
templates/fast-api/: alembic.ini  manage.py
templates/fast-api/app/: main.py
templates/fast-api/app/controllers/: __init__.py
templates/fast-api/app/controllers/responses/: default.py
templates/fast-api/app/model/tables/: __init__.py  example.py
templates/fast-api/config/: __init__.py  api_config.py  logger_config.py
