[tool.poetry]
name = "fast-api-template"
version = "0.1.0"
description = "Template for fast creation skeleton of project"
authors = ["Hryhorenko Vitalii <hryhorenko.vitalii@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
loguru = "^0.6.0"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.0"
alembic = "^1.9.1"
typer = "^0.7.0"
psycopg2-binary = "^2.9.5"
SQLAlchemy = "^1.4.46"

[tool.poetry.dev-dependencies]
isort = "^5.11.4"
mypy = "^0.991"
black = "^22.12.0"
httpx = "^0.23.3"
pytest = "^7.2.0"
pycodestyle = "^2.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
